--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@
 @import url("./styles/carrossel.css");
 @import url("./styles/header.css");
 @import url('./styles/topicos.css');
+@import url('./styles/contato.css');
+@import url('./styles/footer.css');
 
 :root {
     --cor-de-fundo:#EBECEE;
