--- a/styles/styles/carrossel.css
+++ b/styles/styles/carrossel.css
@@ -130,4 +130,9 @@
         width: 60%;
         margin-left: 3em;
     }
+
+      .botoes__ancora:hover {
+        background: var(--azul-degrade);
+        transition: 2s;
+    }
 }
