--- a/styles/styles/header.css
+++ b/styles/styles/header.css
@@ -35,6 +35,15 @@
     display: block;
 }
 
+.container__botao:checked~.container__rotulo > .cabecalho__menu-hamburguer{
+    background-image: url('/images/Menu\ Aberto.svg');    
+}
+
+.container__botao:checked~.container__rotulo {
+    background: var(--azul-degrade);
+    
+}
+
 .lista-menu__titulo,
 .lista-menu__item {
     padding: 1em;
@@ -44,6 +53,10 @@
 .lista-menu__titulo {
     color: var(--laranja);
     font-weight: 700;
+}
+
+.lista-menu__titulo:hover {
+    cursor: pointer;
 }
 
 .lista-menu__link {
@@ -116,6 +129,25 @@
         display: none;
     }
 
+    .opcoes__botao:checked~.opcoes__rotulo> .opcoes__item {
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+
+    .opcoes__item {
+        padding: 2em 1em;
+    }
+
+    .lista-menu__item:hover {
+        background: var(--azul-degrade);
+    }
+
+    .lista-menu__item:hover > .lista-menu__link {
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
+    }
+
+
 }
 
 @media screen and (min-width:1728px) {
@@ -125,9 +157,16 @@
         text-decoration: none;
         color: var(--preto);
     }
+    
+    .container__texto:hover {
+        background: var(--laranja);
+        color: var(--branco);
+    }
 
     .container__texto {
         display: block;
+        transition: .2s;
+        padding: 1em 0;
     }
 
     .cabecalho {
@@ -136,5 +175,12 @@
 
     .opcoes {
         margin-right: 40%;
+    }
+
+    .opcoes__item:hover {
+        cursor: pointer;
+        background: var(--azul-degrade);
+        color: var(--branco);
+        transition: .2s;
     }
 } 
